# shlep

./: .gitignore  README.md  pyproject.toml
horde/: __init__.py  main.py
shlep/: __init__.py  main.py
