[project]
name = "shlep"
version = "3.1.0"
description = "gather directory contents into a single file"
authors = [
    {name = "Stephan Fitzpatrick", email = "knowsuchagency@gmail.com"},
]
dependencies = [
    "pathspec>=0.11.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
shlep = "shlep.main:cli"
